added section 4 of Template Notebook

--- a/TemplateExperiment.ipynb
+++ b/TemplateExperiment.ipynb
@@ -132,7 +132,7 @@
     "- One sklearn model\n",
     "- One Pytorch model\n",
     "\n",
-    "We begin by creating the possible space of hyperparameters and parameters which will later be used to build our models."
+    "We begin by creating the possible space of hyperparameters and parameters which will later be used to build our models. You can subdivide your models by tasks or run one model for multiple tasks, but be sure to correctly assign model-task pairs in section 1.3."
    ],
    "metadata": {
     "collapsed": false,
@@ -368,8 +368,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In our experiments data pre-processing steps are applied right after downloading datasets in the main loop of the experiment.\n",
-    "Given that different models and tasks might require different pre-processing steps, we apply pre-processing steps in an event driven fashion. Those events are separated into task specific data pre-processing events that are applied based on the task, and model specific data pre-processing steps. The main object holding and executing all pre-processing steps is the `dataPreProcessingEventEmitter()` from `NeuralNetworksTrainingPackage.event_handler`."
+    "In our experiments data pre-processing steps are applied right after downloading datasets in the main loop of the experiment. Object of class `dataPreProcessingEventEmitter()` stores all of the pre-processing steps in queues and is responsible for executing them in the right order and on the right partitions of data (such as on `train`). In our code we separate queues into task-specific queues (under namespace such as `regression`) and model-specific queues (under namespace such as `'our_pytorch_classification_model'`), although you're not limited to only those and can introduce your own logic.\n",
+    "\n",
+    "You can also view this process as event-driven, where the `dataPreProcessingEventEmitter()` object listens for which model and task is coming in at every loop and responds by applying the correct transformations to the data.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -464,7 +465,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### 2.2 Adding pre-processing step objects to an event listener"
+    "### 2.2 Adding pre-processing steps to a queue"
    ],
    "metadata": {
     "collapsed": false,
@@ -476,7 +477,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Next we need to add objects we've initiated into their corresponding tasks. `dataPreProcessingEventEmitter` works like a standard event emitter which fires events when it receives the name of the event, in our case `regression` or `classification` Feel free to apply different pre-processing steps to different tasks."
+    "Next we need to add objects we've initiated into their corresponding tasks. `dataPreProcessingEventEmitter` works like a standard queue which sequentially applies all operations stored in that namespace, in our case `regression` or `classification`. Feel free to apply different pre-processing steps to different tasks, or add your own ."
    ],
    "metadata": {
     "collapsed": false,
@@ -727,7 +728,8 @@
     "- `.set_dataset(X, y, categorical_indicator, attribute_names)` which is how you pass it the datasets\n",
     "- `.apply('event_name')` applies all of the transformations defined under the event name\n",
     "- `.get_train_val_test()` retrieves train, val, and test datasets from the data_pre_processing event\n",
-    "- `.reset(hard = False)` reset the dataset or `hard = True` to reset everything including all added transformations steps (called automatically when calling `.set_dataset`)\n",
+    "- `.reset(hard = False)` reset the dataset (called automatically when calling `.set_dataset`)\n",
+    " - `.reset(hard = True)` to reset everything including the seed and all the added transformation steps\n",
     "- `.get('name')` retrieves a specific split of the data, name can be `train`, `val`, `test`\n",
     "\n",
     "When `.apply('event_name')` doesn't find any `'event_name'` it does nothing."
@@ -826,10 +828,258 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 4.1 Adding your own sklearn metrics class"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "TODO: create a unified sklearn metrics calculator"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 4.2 Adding your own pytorch metrics class"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Metrics class is required to have `get_metrics()`, and `get_all()` methods. Only difference is `get_all()` outputs both metrics and a loss while `get_metrics()` outputs only metrics. This was done to avoid calculating train_loss twice, both during training and after the training. If computational power is not of concern, you can implement only one of them and adjust the main training loop to only use one of them. By default we gather"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class MyPytorchModelMetrics():\n",
+    "    def __init__(self):\n",
+    "        # You can add initialisation parameters if you wish to control how metrics are gathered at run-time\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "    def get_metrics(self, model, test_loader, hyperparameters, test_set_name=None):\n",
+    "        if test_set_name:\n",
+    "            assert isinstance(test_set_name, str), \"test_set_name must be a string, such as train, val, test\"\n",
+    "\n",
+    "        \"\"\"\n",
+    "        Input:\n",
+    "            model: your model\n",
+    "            test_loader: pytorch DataLoader, returns tensors of batch_size x num_columns from dataset wrapper initialised in section 3.\n",
+    "            hyperparameters: your hyperparameters initialised in section 1.\n",
+    "            test_set_name: str appended to the key's of the dictionary returned at the end\n",
+    "        \"\"\"\n",
+    "\n",
+    "        # ---------\n",
+    "        # Add your own code here\n",
+    "        # ---------\n",
+    "\n",
+    "        metrics = {\n",
+    "            'accuracy_score': accuracy,\n",
+    "            'roc_auc_score': roc_auc,\n",
+    "            'confusion_matrix': confusion_matrix # Add more metrics here if you wish to gather more\n",
+    "        }\n",
+    "\n",
+    "        if test_set_name:\n",
+    "            metrics_name = f'{test_set_name}_metrics'\n",
+    "            final_metrics = {metrics_name: metrics}\n",
+    "        else:\n",
+    "            final_metrics = {'metrics': metrics}\n",
+    "\n",
+    "        return final_metrics\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Example output for classification:\n",
+    "        {'train_metrics': {\n",
+    "            'accuracy_score': 0.59045,\n",
+    "            'roc_auc_score': 0.023819148540496826,\n",
+    "            'confusion_matrix': [[521, 14],[16, 312]]\n",
+    "            }\n",
+    "        }\n",
+    "    \"\"\"\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Example output for regression:\n",
+    "    {'train_metrics': {'RMSE': 0.5904541168055158,\n",
+    "                       'r2_score': 0.023819148540496826,\n",
+    "                       'se_quant': {0.01: 7.687292236369103e-05, 0.025: 0.00033428650931455195, 0.05: 0.0007752738310955465\n",
+    "                                    0.1: 0.003265600185841322, 0.2: 0.008951567113399506, (...), 0.99: 1.9776358604431152\n",
+    "                       }\n",
+    "     }\n",
+    "    \"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def get_all(self, model, test_loader, hyperparameters, test_set_name=None):\n",
+    "        if test_set_name:\n",
+    "            assert isinstance(test_set_name, str), \"test_set_name must be a string, such as train, val, test\"\n",
+    "\n",
+    "        # ---------\n",
+    "        # Add your own code here\n",
+    "        # ---------\n",
+    "\n",
+    "        metrics = {\n",
+    "            'accuracy_score': accuracy,\n",
+    "            'roc_auc_score': roc_auc,\n",
+    "            'confusion_matrix': confusion_matrix}\n",
+    "\n",
+    "        if test_set_name:\n",
+    "            metrics_name = f'{test_set_name}_metrics'\n",
+    "            final_metrics = {metrics_name: metrics}\n",
+    "        else:\n",
+    "            final_metrics = {'metrics': metrics}\n",
+    "\n",
+    "\n",
+    "        return final_metrics\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Example output for classification:\n",
+    "        {'train_loss': 0.357,\n",
+    "        'train_metrics': {\n",
+    "            'accuracy_score': 0.59045,\n",
+    "            'roc_auc_score': 0.023819148540496826,\n",
+    "            'confusion_matrix': [[521, 14],[16, 312]]\n",
+    "            }\n",
+    "        }\n",
+    "    \"\"\"\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Example output for regression:\n",
+    "    {'train_loss': 0.35755656490325927,\n",
+    "     'train_metrics': {'RMSE': 0.5904541168055158,\n",
+    "                       'r2_score': 0.023819148540496826,\n",
+    "                       'se_quant': {0.01: 7.687292236369103e-05, 0.025: 0.00033428650931455195, 0.05: 0.0007752738310955465\n",
+    "                                    0.1: 0.003265600185841322, 0.2: 0.008951567113399506, (...), 0.99: 1.9776358604431152\n",
+    "                       }\n",
+    "     }\n",
+    "    \"\"\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Additionally, we've implemented `ConfusionMatrix()` in the `metrics/LcnMetrics.py` file that can simplify your confusion matrix calculations:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "from metrics.LcnMetrics import ConfusionMatrix\n",
+    "\n",
+    "preds_1 = torch.tensor([1, 0, 0, 1, 1])\n",
+    "target_1 = torch.tensor([1, 0, 1, 0, 1])\n",
+    "\n",
+    "preds_2 = torch.tensor([0, 0, 0, 1, 1])\n",
+    "target_2 = torch.tensor([0, 0, 1, 0, 1])\n",
+    "\n",
+    "preds_3 = torch.tensor([0, 0, 1])\n",
+    "target_3 = torch.tensor([0, 0, 1])\n",
+    "\n",
+    "confusion_accumulator = ConfusionMatrix()\n",
+    "\n",
+    "confusion_accumulator.update(preds_1, target_1)\n",
+    "confusion_accumulator.update(preds_2, target_2)\n",
+    "confusion_accumulator.update(preds_3, target_3)\n",
+    "\n",
+    "confusion_matrix = confusion_accumulator.compute()\n",
+    "confusion_matrix = [[int(i) for i in row] for row in confusion_matrix.cpu().numpy().tolist()]\n",
+    "# confusion_matrix: [[5, 3],[2, 4]]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 5. Model Training routine"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "sklearn_model_training = {'regression': our_sklearn_metrics_for_both_regression_and_classification,\n",
+    "                   'classification': our_sklearn_metrics_for_both_regression_and_classification}\n",
+    "\n",
+    "pytorch_regression_model_training = {'regression': our_pytorch_regression_metrics}\n",
+    "\n",
+    "pytorch_classification_model_metrics = {'classification': our_pytorch_classification_metrics}\n",
+    "\n",
+    "metric_model_pairs = {\n",
+    "    'our_sklearn_model': ,\n",
+    "    'our_pytorch_regression_model': pytorch_classification_metrics,\n",
+    "    'our_pytorch_classification_model': pytorch_regression_metrics\n",
+    "\n",
+    "}"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
