first draft of TemplateExperiment done

--- a/TemplateExperiment.ipynb
+++ b/TemplateExperiment.ipynb
@@ -787,7 +787,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Next we need to add how our metrics will be calculated. Due to different models outputting different formats, you need to code in your own class  that will be responsible for calculating metrics. You're also free to add more metrics. Even if you're using different model for different tasks you still need to add them under `model_name` and `task`, this is to ensure proper assignment of"
+    "Next we need to add how our metrics will be calculated. Due to different models outputting different formats, you need to code in your own class  that will be responsible for calculating metrics. You're also free to add more metrics. Even if you're using different model for different tasks you still need to add them under `model_name` and `task`. `metric_model_pairs` dictionary should be available under the global namespace."
    ],
    "metadata": {
     "collapsed": false,
@@ -855,7 +855,64 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "class MySklearnModelMetrics():\n",
+    "    def __init__(self):\n",
+    "        # You can add initialisation parameters if you wish to control how metrics are gathered at run-time\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "    def get_metrics(self, model, test_data, hyperparameters, test_set_name=None):\n",
+    "        if test_set_name:\n",
+    "            assert isinstance(test_set_name, str), \"test_set_name must be a string, such as train, val, test\"\n",
+    "\n",
+    "        \"\"\"\n",
+    "        Input:\n",
+    "            model: your model\n",
+    "            test_loader: pytorch DataLoader, returns tensors of batch_size x num_columns from dataset wrapper initialised in section 3.\n",
+    "            hyperparameters: your hyperparameters initialised in section 1.\n",
+    "            test_set_name: str appended to the key's of the dictionary returned at the end\n",
+    "        \"\"\"\n",
+    "\n",
+    "        # ---------\n",
+    "        # Add your own code here\n",
+    "        # ---------\n",
+    "\n",
+    "        metrics = {\n",
+    "            'accuracy_score': accuracy,\n",
+    "            'roc_auc_score': roc_auc,\n",
+    "            'confusion_matrix': confusion_matrix # Add more metrics here if you wish to gather more\n",
+    "        }\n",
+    "\n",
+    "        if test_set_name:\n",
+    "            metrics_name = f'{test_set_name}_metrics'\n",
+    "            final_metrics = {metrics_name: metrics}\n",
+    "        else:\n",
+    "            final_metrics = {'metrics': metrics}\n",
+    "\n",
+    "        return final_metrics\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Example output for classification:\n",
+    "        {'train_metrics': {\n",
+    "            'accuracy_score': 0.59045,\n",
+    "            'roc_auc_score': 0.023819148540496826,\n",
+    "            'confusion_matrix': [[521, 14],[16, 312]]\n",
+    "            }\n",
+    "        }\n",
+    "    \"\"\"\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Example output for regression:\n",
+    "    {'train_metrics': {'RMSE': 0.5904541168055158,\n",
+    "                       'r2_score': 0.023819148540496826,\n",
+    "                       'se_quant': {0.01: 7.687292236369103e-05, 0.025: 0.00033428650931455195, 0.05: 0.0007752738310955465\n",
+    "                                    0.1: 0.003265600185841322, 0.2: 0.008951567113399506, (...), 0.99: 1.9776358604431152\n",
+    "                       }\n",
+    "     }\n",
+    "    \"\"\"\n",
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -899,7 +956,7 @@
     "        pass\n",
     "\n",
     "\n",
-    "    def get_metrics(self, model, test_loader, hyperparameters, test_set_name=None):\n",
+    "    def get_metrics(self, model, test_loader, hyperparameters: dict, test_set_name=None):\n",
     "        if test_set_name:\n",
     "            assert isinstance(test_set_name, str), \"test_set_name must be a string, such as train, val, test\"\n",
     "\n",
@@ -951,7 +1008,7 @@
     "\n",
     "\n",
     "\n",
-    "    def get_all(self, model, test_loader, hyperparameters, test_set_name=None):\n",
+    "    def get_all(self, model, test_loader, hyperparameters:dict, test_set_name=None):\n",
     "        if test_set_name:\n",
     "            assert isinstance(test_set_name, str), \"test_set_name must be a string, such as train, val, test\"\n",
     "\n",
@@ -1062,28 +1119,354 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Finally we need to add `init_model` function, and `ModelTrainingRoutine` class (training object will be initialised in the main training loop)."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
-    "sklearn_model_training = {'regression': our_sklearn_metrics_for_both_regression_and_classification,\n",
-    "                   'classification': our_sklearn_metrics_for_both_regression_and_classification}\n",
+    "sklearn_model_and_training = {'model_init':init_Sklearn_Model, 'training_routine': SklearnTrainingRoutine}\n",
     "\n",
-    "pytorch_regression_model_training = {'regression': our_pytorch_regression_metrics}\n",
+    "pytorch_regression_model_and_training = {'model_init':init_Pytorch_Reg_Model, 'training_routine': PytorchRegTrainingRoutine}\n",
     "\n",
-    "pytorch_classification_model_metrics = {'classification': our_pytorch_classification_metrics}\n",
+    "pytorch_cls_model_and_training = {'model_init':init_Pytorch_Cls_Model, 'training_routine': PytorchClsTrainingRoutine}\n",
     "\n",
-    "metric_model_pairs = {\n",
-    "    'our_sklearn_model': ,\n",
-    "    'our_pytorch_regression_model': pytorch_classification_metrics,\n",
-    "    'our_pytorch_classification_model': pytorch_regression_metrics\n",
-    "\n",
+    "model_training_pairs = {\n",
+    "    'our_sklearn_model': sklearn_model_and_training,\n",
+    "    'our_pytorch_regression_model': pytorch_regression_model_and_training,\n",
+    "    'our_pytorch_classification_model': pytorch_cls_model_and_training\n",
     "}"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 5.1 Creating your own init"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Init function should take in unpacked hyperparameters and return an appropriate model. The output of `init_model` function will then be directly passed to `ModelTrainingRoutine` object"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def init_Model(**hyperparameters):\n",
+    "\n",
+    "    # ---------\n",
+    "    # Add your own code here\n",
+    "    # ---------\n",
+    "\n",
+    "    return # Model"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 5.2 Adding your own sklearn training routine"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class MySklearnModelTrainingRoutine():\n",
+    "    def __init__(self, all_hyperparameters):\n",
+    "        # Assign proper hyperparameters to arguments\n",
+    "        # self.my_hyperparam_1 = my_hyperparam_1\n",
+    "        # self.my_hyperparam_2 = my_hyperparam_2\n",
+    "\n",
+    "    def train(self, model, train_data):\n",
+    "        # Input comes as a tuple of data, target, categorical_indicator, attribute_names\n",
+    "\n",
+    "        X, y, categorical_indicator, attribute_names = train_data\n",
+    "\n",
+    "        return model\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 5.3 Adding your own pytorch training routine"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class MyPytorchModelTrainingRoutine():\n",
+    "    def __init__(self, all_hyperparameters):\n",
+    "        # Assign proper hyperparameters to arguments\n",
+    "        # self.my_hyperparam_1 = my_hyperparam_1\n",
+    "        # self.my_hyperparam_2 = my_hyperparam_2\n",
+    "\n",
+    "\n",
+    "        self.optimizer = None # Required, must be None at the start\n",
+    "        self.scheduler = None # Required, must be None at the start\n",
+    "\n",
+    "        self.epoch = 0 # Required, must be 0 at the start\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def set_optimizer_scheduler(self, model):\n",
+    "        self.optimizer = # Your code here\n",
+    "        self.scheduler = # Your code here, not required\n",
+    "\n",
+    "    def scheduler_step(self, epoch):\n",
+    "        if self.scheduler is not None:\n",
+    "            self.scheduler.step(epoch)\n",
+    "\n",
+    "        self.epoch = epoch\n",
+    "\n",
+    "\n",
+    "    def train(self, model, train_loader):\n",
+    "        model.train()\n",
+    "\n",
+    "        \"\"\"\n",
+    "        Input:\n",
+    "            model: your model\n",
+    "            train_loader: pytorch DataLoader, returns tensors of batch_size x num_columns from dataset wrapper initialised in section 3.\n",
+    "        \"\"\"\n",
+    "\n",
+    "        # ---------\n",
+    "        # Add your own code here\n",
+    "        # ---------\n",
+    "\n",
+    "        # =======\n",
+    "        # We recommend estimating the train loss during training time\n",
+    "        # If the loss becomes NaN, train_loss output should be set to None to, this will trigger early stopping but still\n",
+    "        # log the train_loss to the orchestrator\n",
+    "        # =======\n",
+    "\n",
+    "        final_metric = {'train_loss': train_loss}\n",
+    "        return train_loss\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# 6. Main Experiment Loop"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "torch_models = ('our_pytorch_regression_model',)\n",
+    "\n",
+    "sklearn_models = ('our_sklearn_model')\n",
+    "\n",
+    "num_of_experiment_to_be_run = # modify to appropriate\n",
+    "\n",
+    "for i in range(num_of_experiment_to_be_run):\n",
+    "    print(f'==== Begin run:{i} ====')\n",
+    "    run_info = ex.begin_run_sticky()\n",
+    "\n",
+    "    hyperparameters = run_info['hyp']\n",
+    "    model_name = run_info['model']\n",
+    "\n",
+    "    task = hyperparameters['task']\n",
+    "    seed = hyperparameters['seed']\n",
+    "\n",
+    "\n",
+    "    torch.manual_seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "\n",
+    "\n",
+    "    print('---- Loading datasets ----')\n",
+    "    X, y, categorical_indicator, attribute_names = ex.opml_load_task(run_info['mtpair_task'])\n",
+    "\n",
+    "    # Pre-processing\n",
+    "    data_pre_processing.set_seed_for_all(seed)\n",
+    "    data_pre_processing.set_dataset(X, y, categorical_indicator, attribute_names)\n",
+    "    data_pre_processing.apply(task)\n",
+    "    data_pre_processing.apply(model_name)\n",
+    "    train_data, val_data, test_data = data_pre_processing.get_train_val_test()\n",
+    "\n",
+    "\n",
+    "    # Getting appropriate metrics\n",
+    "    metrics_calculator = metric_model_pairs[model_name][task]\n",
+    "\n",
+    "\n",
+    "    match model_name:\n",
+    "        case _ if model_name in sklearn_models:\n",
+    "            init_model = model_training_pairs[model_name]['model_init']\n",
+    "            TrainingRoutine = model_training_pairs[model_name]['training_routine']\n",
+    "\n",
+    "            model = init_model(**hyperparameters)\n",
+    "            training_routine = TrainingRoutine(**hyperparameters)\n",
+    "\n",
+    "            start_time = time.time()\n",
+    "            fit_model = training_routine.train(model, train_data)\n",
+    "\n",
+    "            training_time = time.time()-start_time\n",
+    "            train_all_metrics = metrics_calculator.get_all(model, train_data, hyperparameters, 'train')\n",
+    "            val_all_metrics = metrics_calculator.get_all(model, val_data, hyperparameters, 'val')\n",
+    "            test_all_metrics = metrics_calculator.get_all(model, test_data, hyperparameters, 'test')\n",
+    "\n",
+    "            final_metrics = {}\n",
+    "            final_metrics.update(train_all_metrics)\n",
+    "            final_metrics.update(val_all_metrics)\n",
+    "            final_metrics.update(test_all_metrics)\n",
+    "            final_metrics.update({'epoch': None})\n",
+    "            final_metrics.update({'epoch_time': training_time})\n",
+    "\n",
+    "            ex.update_run(final_metrics)\n",
+    "\n",
+    "\n",
+    "\n",
+    "        case _ if model_name in torch_models:\n",
+    "            # hyperparameters will be updated with {'input_dim': num_columns_X, 'output_dim':num_columns_Y}\n",
+    "            # this is required for proper initialisation of some models\n",
+    "            hyperparameters.update(train_data.get_dims())\n",
+    "\n",
+    "\n",
+    "            train_batch_size = hyperparameters['batch_size']\n",
+    "            train_dataloader = torch.utils.data.DataLoader(train_data, batch_size=train_batch_size,shuffle= True)\n",
+    "            val_dataloader = torch.utils.data.DataLoader(val_data,batch_size=len(val_data),shuffle= True)\n",
+    "            test_dataloader = torch.utils.data.DataLoader(test_data,batch_size=len(test_data),shuffle= True)\n",
+    "\n",
+    "\n",
+    "            init_model = model_training_pairs[model_name]['model_init']\n",
+    "            TrainingRoutine = model_training_pairs[model_name]['training_routine']\n",
+    "\n",
+    "\n",
+    "            model = init_model(**hyperparameters)\n",
+    "            training_routine = TrainingRoutine(**hyperparameters)\n",
+    "\n",
+    "            training_routine.set_optimizer_scheduler(model)\n",
+    "\n",
+    "            start_epoch = 1  # start from epoch 1 or last checkpoint epoch\n",
+    "            total_epochs = hyperparameters['epochs']\n",
+    "            start_time = time.time()\n",
+    "\n",
+    "            for epoch in range(start_epoch, total_epochs + start_epoch):\n",
+    "                print(f\"----{epoch}th training epoch ----\")\n",
+    "                epoch_metrics = {}\n",
+    "\n",
+    "                training_routine.scheduler_step(epoch)\n",
+    "                train_loss = training_routine.train(model, train_dataloader)\n",
+    "\n",
+    "\n",
+    "                if train_loss is None:\n",
+    "                    print('---Stopping training due to loss being nan!---')\n",
+    "                    epoch_metrics = {'train_loss': train_loss, 'epoch': epoch}\n",
+    "                    ex.update_run(epoch_metrics)\n",
+    "                    break\n",
+    "\n",
+    "                if epoch == total_epochs:\n",
+    "                    continue\n",
+    "\n",
+    "                epoch_metrics.update(train_loss)\n",
+    "                epoch_metrics.update({'epoch': epoch})\n",
+    "                ex.update_run(epoch_metrics)\n",
+    "                print(epoch_metrics)\n",
+    "\n",
+    "            else:\n",
+    "                final_metrics = {}\n",
+    "                training_time = time.time()-start_time\n",
+    "\n",
+    "                train_metrics = metrics_calculator.get_metrics(model, train_dataloader, hyperparameters, 'train')\n",
+    "                val_all_metrics = metrics_calculator.get_all(model, val_dataloader, hyperparameters, 'val')\n",
+    "                test_all_metrics = metrics_calculator.get_all(model, test_dataloader, hyperparameters, 'test')\n",
+    "\n",
+    "                final_metrics.update(train_loss)\n",
+    "                final_metrics.update(train_metrics)\n",
+    "                final_metrics.update(val_all_metrics)\n",
+    "                final_metrics.update(test_all_metrics)\n",
+    "                final_metrics.update({'epoch': epoch})\n",
+    "                final_metrics.update({'epoch_time': training_time})\n",
+    "\n",
+    "                ex.update_run(final_metrics)\n",
+    "                print(final_metrics)\n",
+    "\n",
+    "    ex.end_run()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
